🔧 update all plugin methods to static